--- a/hkube/templates/pipeline-driver-service.yaml
+++ b/hkube/templates/pipeline-driver-service.yaml
@@ -8,6 +8,7 @@ metadata:
     app: pipeline-driver
     group: {{ .Values.labels.group.value }}
     core: "true"
+    metrics: "true"
 spec:
   selector:
     group: hkube
