--- a/hkube/templates/resource-manager-service.yaml
+++ b/hkube/templates/resource-manager-service.yaml
@@ -8,6 +8,7 @@ metadata:
     app: resource-manager
     group: {{ .Values.labels.group.value }}
     core: "true"
+    metrics: "true"
 spec:
   selector:
     app: resource-manager
