--- a/hkube/templates/task-executor-service.yaml
+++ b/hkube/templates/task-executor-service.yaml
@@ -8,6 +8,7 @@ metadata:
     app: task-executor
     group: {{ .Values.labels.group.value }}
     core: "true"
+    metrics: "true"
 spec:
   selector:
     app: task-executor
