--- a/hkube/templates/trigger-service-service.yaml
+++ b/hkube/templates/trigger-service-service.yaml
@@ -8,6 +8,7 @@ metadata:
     app: trigger-service
     group: {{ .Values.labels.group.value }}
     core: "true"
+    metrics: "true"
 spec:
   selector:
     app: trigger-service
