--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -77,6 +77,9 @@ minio:
   persistence:
     enabled: true
     storageClass: ''
+metrics:
+  serviceMonitorSelector:
+    release: metrics
 systemversion: v1.3.7
 build_secret:
   docker_registry: ''
