--- a/hkube/templates/caching-service-deployment.yaml
+++ b/hkube/templates/caching-service-deployment.yaml
@@ -86,11 +86,11 @@ spec:
                 configMapKeyRef:
                   name: caching-service-configmap
                   key: DEFAULT_STORAGE
-            - name: STORAGE_BINARY
+            - name: STORAGE_ENCODING
               valueFrom:
                 configMapKeyRef:
                   name: caching-service-configmap
-                  key: STORAGE_BINARY                  
+                  key: STORAGE_ENCODING                  
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
