--- a/hkube/templates/configmaps/monitor-server-cm.yaml
+++ b/hkube/templates/configmaps/monitor-server-cm.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   NODE_ENV: {{.Values.env.node_env}}
   DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
-  STORAGE_BINARY: {{index .Values.global.storage.binary | quote}}
+  STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
 {{- if eq .Values.env.default_storage "fs" }}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
 {{- end }}
