--- a/hkube/templates/configmaps/storage-cleaner-cm.yaml
+++ b/hkube/templates/configmaps/storage-cleaner-cm.yaml
@@ -6,5 +6,6 @@ metadata:
 data:
   TEMP_OBJECT_EXPIRATION_DAYS: "{{index .Values "storage_cleaner" "env" "temp_object_expiration_days"}}"
   RESULT_OBJECT_EXPIRATION_DAYS: "{{index .Values "storage_cleaner" "env" "result_object_expiration_days"}}"
-  DEFAULT_STORAGE: {{index .Values "env" "default_storage"}}
+  DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
+  STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
