--- a/hkube/templates/configmaps/task-executor-cm.yaml
+++ b/hkube/templates/configmaps/task-executor-cm.yaml
@@ -6,8 +6,16 @@ metadata:
 data:
   NODE_ENV: {{.Values.env.node_env}}
   DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
+  STORAGE_BINARY: "false"
+  STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
+  DISCOVERY_ENCODING: {{index .Values.global.discovery.encoding | quote}}
+  DISCOVERY_PORT: {{index .Values.global.discovery.port | quote}}
+  DISCOVERY_TIMEOUT: {{index .Values.global.discovery.timeout | quote}}
+  DISCOVERY_MAX_CACHE_SIZE: {{index .Values.global.discovery.maxCacheSize | quote}}
+  WORKER_ALGORITHM_ENCODING: "{{index .Values "task_executor" "env" "worker_algorithm_encoding"}}"
+  DEFAULT_WORKER_ALGORITHM_ENCODING: "{{index .Values "task_executor" "env" "default_worker_algorithm_encoding"}}"
+  DEFAULT_STORAGE_PROTOCOL: "{{index .Values "task_executor" "env" "default_storage_protocol"}}"
   WORKER_SOCKET_MAX_PAYLOAD_BYTES: "{{index .Values "task_executor" "env" "worker_socket_max_payload_bytes"}}"
-  STORAGE_BINARY: {{index .Values.global.storage.binary | quote}}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
   METRICS_PORT: "{{index .Values "task_executor" "env" "metric_port"}}"
   IS_NAMESPACED: {{ .Values.global.namespaced | quote}}
