--- a/hkube/templates/monitor-server-deployment.yaml
+++ b/hkube/templates/monitor-server-deployment.yaml
@@ -82,11 +82,11 @@ spec:
                 configMapKeyRef:
                   name: monitor-server-configmap
                   key: DEFAULT_STORAGE
-            - name: STORAGE_BINARY
+            - name: STORAGE_ENCODING
               valueFrom:
                 configMapKeyRef:
                   name: monitor-server-configmap
-                  key: STORAGE_BINARY                  
+                  key: STORAGE_ENCODING                  
             - name: LOG_EXTERNAL_REQUESTS
               value: {{ .Values.monitor_server.env.log_external_requests | quote}}
             - name: ELASTICSEARCH_SERVICE_URL
