--- a/hkube/templates/storage-migration.yaml
+++ b/hkube/templates/storage-migration.yaml
@@ -52,8 +52,10 @@ spec:
 {{- end }}                                    
         - name: DEFAULT_STORAGE
           value: {{ .Values.env.default_storage | quote }}
-        - name: STORAGE_BINARY
-          value: {{index .Values.global.storage.binary | quote}}    
+        - name: STORAGE_ENCODING
+          value: {{index .Values.global.storage.encoding | quote}}  
+        - name: SOURCE_STORAGE_ENCODING
+          value: "{{index .Values "storage_migration" "env" "source_storage_encoding"}}"  
         - name: CLUSTER_NAME
           value: {{ .Values.global.clusterName | quote}}
         - name: NODE_ENV
