--- a/hkube/templates/configmaps/api-server-cm.yaml
+++ b/hkube/templates/configmaps/api-server-cm.yaml
@@ -7,7 +7,8 @@ data:
   NODE_ENV: {{.Values.env.node_env}}
   BASE_URL_PATH: {{index .Values "api_server" "env" "base_url_path" | quote}}
   DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
-  STORAGE_BINARY: {{index .Values.global.storage.binary | quote}}
+  STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
+  STORAGE_RESULTS_THRESHOLD: {{index .Values.global.storage.storageResultsThreshold | quote}}
 {{- if eq .Values.env.default_storage "fs" }}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
 {{- end }}  
