--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -14,6 +14,11 @@ global:
         name: hkube-storage
         capacity: 10Gi
         storage_class: '-'
+      dev_pvc: 
+        name: hkube-dev-sources
+        capacity: 10Gi
+        storage_class: '-'
+        enabled: false
       base_directory: /hkubedata
     s3:
       access_key: hkubeminiokey
