Add discovery encoding to algorithm-operator-cm

--- a/hkube/templates/configmaps/algorithm-operator-cm.yaml
+++ b/hkube/templates/configmaps/algorithm-operator-cm.yaml
@@ -8,6 +8,7 @@ data:
   STORAGE_BINARY: "false"
   DEFAULT_STORAGE: {{index .Values "env" "default_storage" | quote}}
   STORAGE_ENCODING: {{index .Values.global.storage.encoding | quote}}
+  DISCOVERY_ENCODING:  {{index .Values.global.discovery.encoding | quote}}
   BASE_FS_ADAPTER_DIRECTORY: {{ .Values.global.storage.fs.base_directory | quote}}
   METRICS_PORT: {{ index .Values "algorithm_operator" "env" "metric_port" | quote }}
   CLUSTER_NAME: {{ .Values.global.clusterName | quote}}
