prevent minio from setting serviceAccount for prometheus

--- a/hkube/values.yaml
+++ b/hkube/values.yaml
@@ -87,6 +87,8 @@ minio:
   persistence:
     enabled: true
     storageClass: ''
+  serviceAccount:
+    create: false
 metrics:
   serviceMonitorSelector:
     release: metrics
