add hkube system version to hkube

--- a/hkube/templates/simulator-deployment.yaml
+++ b/hkube/templates/simulator-deployment.yaml
@@ -31,6 +31,8 @@ spec:
           ports:
             - containerPort: {{ .Values.simulator.env.metric_port }}
           env:
+            - name: HKUBE_SYSTEM_VERSION
+              value: {{ .Values.systemversion | quote}}
             - name: MONITOR_BACKEND_PATH
               valueFrom:
                 configMapKeyRef:
