--- a/hkube/templates/task-executor-deployment.yaml
+++ b/hkube/templates/task-executor-deployment.yaml
@@ -68,10 +68,15 @@ spec:
                 configMapKeyRef:
                   name: task-executor-configmap
                   key: METRICS_PORT
+{{- if .Values.global.isPrivileged }}            
             - name: JAEGER_AGENT_SERVICE_HOST
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+{{- else if .Values.jaeger.external_agent_address }}
+            - name: JAEGER_AGENT_SERVICE_HOST
+              value: .Values.jaeger.external_agent_address
+{{- end }}                  
             - name: DEFAULT_STORAGE
               valueFrom:
                 configMapKeyRef:
