--- a/hkube/templates/trigger-service-deployment.yaml
+++ b/hkube/templates/trigger-service-deployment.yaml
@@ -43,10 +43,15 @@ spec:
                 configMapKeyRef:
                   name: trigger-service-configmap
                   key: METRICS_PORT
+{{- if .Values.global.isPrivileged }}            
             - name: JAEGER_AGENT_SERVICE_HOST
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+{{- else if .Values.jaeger.external_agent_address }}
+            - name: JAEGER_AGENT_SERVICE_HOST
+              value: .Values.jaeger.external_agent_address
+{{- end }}    
             - name: NAMESPACE
               valueFrom:
                 fieldRef:
